src/objects/C501_Account_Merge__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Merges</relationshipLabel>
        <relationshipName>Account_Merges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Match_Id__c</fullName>
        <label>Contact Match Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Metric_Name__c</fullName>
        <label>Merge Metric Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Action__c</fullName>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Merge_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_Confidence__c</fullName>
        <label>Merge Confidence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Merge_Metric__c</fullName>
        <label>Merge Metric</label>
        <referenceTo>C501_Merge_Metric__c</referenceTo>
        <relationshipLabel>Account Merges</relationshipLabel>
        <relationshipName>Account_Merges</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merge_Target_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Target Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Merges (Merge Target Account)</relationshipLabel>
        <relationshipName>Account_Merge_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Merge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Merge-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Merges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>